<resources>
    <string name="app_name">AbdelrahmanTealab_ MAPD711_Assignment3</string>
    <string name="mainScreenTitle">Select your city below !</string>
    <string name="north_york">North York</string>
    <string name="toronto_downtown">Toronto Downtown</string>
    <string name="scarborough">Scarborough</string>
    <string name="mississauga">Mississauga</string>
    <string name="oakville">Oakville</string>

    <string name="title_activity_maps">Map</string>
    <string name="switch_view">Switch View</string>
    <string name="satellite_view">Satellite View</string>
    <string name="normal_view">Normal View</string>
</resources>