<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bungee_shade"
            android:lines="2"
            android:outlineProvider="none"
            android:text="@string/mainScreenTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/northYorkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/monofett"
            android:lines="1"
            android:maxLines="1"
            android:onClick="citySelected"
            android:text="@string/north_york"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/torontoDowntownButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/monofett"
            android:lines="1"
            android:maxLines="1"
            android:onClick="citySelected"
            android:text="@string/toronto_downtown"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/scarboroughButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/monofett"
            android:lines="1"
            android:maxLines="1"
            android:onClick="citySelected"
            android:text="@string/scarborough"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/mississaugaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/monofett"
            android:lines="1"
            android:maxLines="1"
            android:onClick="citySelected"
            android:text="@string/mississauga"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/oakvilleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="@font/monofett"
            android:lines="1"
            android:maxLines="1"
            android:onClick="citySelected"
            android:text="@string/oakville"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>